--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,12 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.11.3",
     "jade": "~1.11.0",
+    "mocha": "^2.3.3",
     "morgan": "~1.6.1",
+    "mysql": "^2.9.0",
+    "passport": "^0.3.0",
     "sequelize": "^3.12.0",
     "sequelize-cli": "^1.9.1",
     "serve-favicon": "~2.3.0"
