--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "config": "^1.16.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.11.3",
+    "fs": "0.0.2",
     "jade": "~1.11.0",
     "mocha": "^2.3.3",
     "morgan": "~1.6.1",
