--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.11.3",
+    "express-validator": "^2.18.0",
     "fs": "0.0.2",
     "jade": "~1.11.0",
     "mocha": "^2.3.3",
@@ -22,6 +23,7 @@
     "passport-local": "^1.0.0",
     "sequelize": "^3.12.0",
     "sequelize-cli": "^1.9.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "validator": "^4.4.0"
   }
 }
